--- a/parqueadero/index.html
+++ b/parqueadero/index.html
@@ -21,21 +21,21 @@
     <!--Barra de navegacion-->
     <ul class="nav">
         <li class="nav nav-pills">
-            <a class="nav-link active" href="index.html">Inicio</a>
+            <a class="nav-link active" href="/parqueadero/index.html">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="./personas/personas.php">Personas</a>
+            <a class="nav-link active" href="/parqueadero/parqueo/parqueo.php">Parqueo</a>
         </li>
 		
 		<li class="nav-item">
-            <a class="nav-link active" href="./empresas/empresas.php">Empresas</a>
+            <a class="nav-link active" href="/parqueadero/lavado/lavado.php">Lavado</a>
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="./facturas/facturas.html">Facturas</a>
+            <a class="nav-link" href="/parqueadero/detalle/detalle.html">Detalle</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="./busquedas/busquedas.php">Busquedas</a>
+            <a class="nav-link" href="/parqueadero/busquedas/busquedas.php">Busquedas</a>
         </li>
     </ul>
 
