--- a/index.html
+++ b/index.html
@@ -39,64 +39,7 @@
         </li>
     </ul>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-1">
-                <b>Turoriales</b>
-            </div>
-            <div class="col-4">
-                <ul>
-                    <li>
-                        <a href=" https://youtu.be/im1pVV2txiQ" target="_blank">Instalacion Wamp Server</a>
-                    </li>
-                    <li>
-                        <a href="https://youtu.be/65GKEwnAAHg" target="_blank">Creacion de una Base de datos MySQL</a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/watch?v=HShH7XdLNC4&list=PLnWAzeXp9V4lX35XTr0EDG0tCJLHevnhO"
-                            target="_blank">Curso
-                            corto HTML+PHP+MYQL</a>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-1">
-                <b>
-                    Html
-                </b>
-            </div>
-            <div class="col-4">
-                <ul>
-                    <li>
-                        <a href="http://fpsalmon.usc.es/genp/doc/cursos/html/estructura.html" target="_blank">Estructura
-                            de un documento HTML</a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/watch?v=rbuYtrNUxg4" target="_blank">Curso basico</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-1">
-                <b>Boostraps</b>
-            </div>
-            <div class="col-4">
-                <ul>
-                    <li>
-                        <a href="https://getbootstrap.com/docs/4.3/getting-started/introduction/">Documentacion</a>
-                    </li>
-                </ul>
-            </div>
-
-
-        </div>
-
-    </div>
-
-
+    <h1>AQUI VAMOS DE NUEVO</h1>
 
 </body>
 
