--- a/facturas/facturas.html
+++ b/facturas/facturas.html
@@ -39,6 +39,9 @@
         <li class="nav ">
             <a class="nav-link " href="../busquedas/busquedas.php">Busquedas</a>
         </li>
+        <li class="nav ">
+            <a class="nav-link " href="../consultas/consultas.php">Consultas</a>
+        </li>
 
     </ul>
 
@@ -69,10 +72,21 @@
                                 <input type="date" name="costo-total" id="costo-total" class="form-control">
                             </div>
                             <div class="form-group">
+                                <label for="">Cedula empleado</label>
+                                <input type="text" name="cedula-empleado" id="cedula-empleado" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="">Cedula persona</label>
+                                <input type="text" name="Cedula-persona" id="Cedula-persona" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="">Nit Empresa</label>
+                                <input type="text" name="nit" id="nit" class="form-control">
+                            </div>
+                            <div class="form-group">
                                 <input type="submit" class="btn btn-primary" value="insertar">
                                 <a href="facturas.php" class="btn btn-success">Reiniciar</a>
                             </div>
-
                         </form>
 
                     </div>
