--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
 <body>
     <!--Barra de navegacion-->
     <ul class="nav">
-        <li class="nav nav-pills">
-            <a class="nav-link active" href="index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="./personas/personas.php">Personas</a>
-        </li>
-		
-		<li class="nav-item">
-            <a class="nav-link active" href="./empresas/empresas.php">Empresas</a>
-        </li>
+            <li class="nav nav-item nav-pills">
+                <a class="nav-link active" href="index.html">inicio</a>
+            </li>
+            <li class="nav nav-item">
+                <a class="nav-link" href="personas/personas.php">Personas</a>
+            </li>
+            <li class="nav nav-item">
+                <a class="nav-link" href="empresas/empresas.php">Empresas</a>
+            </li>
+            <li class="nav-item nav-pills">
+                <a class="nav-link" href="facturas/facturas.php">Facturas</a>
+            </li>
+            <li class="nav-item nav-pills">
+                <a class="nav-link" href="busquedas/busquedas.php">Busquedas</a>
+            </li>
+            <li class="nav nav-item">
+                <a class="nav-link" href="consultas/consultas.php">Consultas</a>
+            </li>
+    
+        </ul>
 
-        <li class="nav-item">
-            <a class="nav-link" href="./facturas/facturas.html">Facturas</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./busquedas/busquedas.php">Busquedas</a>
-        </li>
-    </ul>
-
-    <h1>AQUI VAMOS DE NUEVO</h1>
+    <h1>Trabajo realizado por:</h1>
+    <h1>Cristhian Salazar Jaramillo</h1>
+    <h1>David Londoño Montoya</h1>
 
 </body>
 
